Fixed margins for large screeen sizes as content was not centered due to conflicting CSS changes.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -136,13 +136,17 @@ body{
   /* INDEX PAGE HERO IMAGE */
   .hero{
     position: relative;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
   }
   .hero_mobile {
     display:none;
   }
   .hero img{
-    width:80%;
-    margin-left: 10%;
+    height: 70vh;
+    width: auto;
+    
     border-radius: 3px;
     box-shadow: 1px 3px 15px rgba(0, 0, 0, 0.586);
   }
@@ -176,7 +180,7 @@ body{
     position: absolute;
     top: 79%;
     padding: 4%;
-    background-color: rgba(165, 42, 42, 0.712);
+    background-color: rgba(165, 42, 42, 0.781);
     font-size: 2.5vw;
     color: white;
     text-align: center;
